--- a/Risk/src/ui/Game.fxml
+++ b/Risk/src/ui/Game.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="578.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameController">
    <children>
-      <ScrollPane fx:id="mapPane" prefHeight="578.0" prefWidth="724.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="240.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane fx:id="mapPane" prefHeight="578.0" prefWidth="704.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="260.0" AnchorPane.topAnchor="0.0">
          <content>
             <VBox>
                <children>
@@ -35,10 +35,10 @@
             </VBox>
          </content>
       </ScrollPane>
-      <VBox layoutX="725.0" layoutY="1.0" prefHeight="578.0" prefWidth="239.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="725.0" layoutY="1.0" prefHeight="578.0" prefWidth="257.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane fx:id="phaseViewUI" minHeight="-Infinity" minWidth="-Infinity" prefHeight="121.0" prefWidth="237.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS" />
-            <AnchorPane fx:id="reinfoPhaseUI" prefHeight="119.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
+            <AnchorPane fx:id="phaseViewUI" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="241.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS" />
+            <AnchorPane fx:id="reinfoPhaseUI" prefHeight="119.0" prefWidth="241.0" style="-fx-border-color: black;" VBox.vgrow="NEVER">
                <VBox.margin>
                   <Insets top="2.0" />
                </VBox.margin>
@@ -47,12 +47,12 @@
                   <Label layoutX="14.0" layoutY="25.0" text="Total Armies :" />
                   <Label fx:id="playerArmies" layoutX="107.0" layoutY="25.0" />
                   <Label layoutX="14.0" layoutY="44.0" text="Territories" />
-                  <TextField fx:id="numberOfArmiesPerTerritory" layoutX="139.0" layoutY="65.0" prefHeight="22.0" prefWidth="84.0" promptText="No. of armies" />
-                  <ComboBox fx:id="playerTerritoryList" layoutX="14.0" layoutY="65.0" prefHeight="22.0" prefWidth="103.0" />
-                  <Button fx:id="addArmies" layoutX="139.0" layoutY="94.0" mnemonicParsing="false" onAction="#addReinforcement" prefHeight="22.0" prefWidth="84.0" text="Add" />
+                  <TextField fx:id="numberOfArmiesPerTerritory" layoutX="154.0" layoutY="65.0" prefHeight="22.0" prefWidth="84.0" promptText="No. of armies" />
+                  <ComboBox fx:id="playerTerritoryList" layoutX="14.0" layoutY="65.0" prefHeight="22.0" prefWidth="122.0" />
+                  <Button fx:id="addArmies" layoutX="154.0" layoutY="92.0" mnemonicParsing="false" onAction="#addReinforcement" prefHeight="22.0" prefWidth="84.0" text="Add" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="attackPhaseUI" prefHeight="152.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
+            <AnchorPane fx:id="attackPhaseUI" prefHeight="153.0" prefWidth="241.0" style="-fx-border-color: black;" VBox.vgrow="NEVER">
                <VBox.margin>
                   <Insets top="2.0" />
                </VBox.margin>
@@ -60,42 +60,45 @@
                   <Label alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="25.0" prefHeight="14.0" prefWidth="103.0" text="Attacker" textAlignment="CENTER" />
                   <Label alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="5.0" prefHeight="14.0" prefWidth="141.0" text="Attack Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="58.0" AnchorPane.rightAnchor="62.0" />
                   <Label alignment="CENTER" contentDisplay="CENTER" layoutX="124.0" layoutY="25.0" prefHeight="14.0" prefWidth="103.0" text="Defender" textAlignment="CENTER" />
-                  <ComboBox fx:id="attackAttackerCB" layoutX="12.0" layoutY="43.0" onAction="#updateDefenderTerritories" prefHeight="22.0" prefWidth="103.0" />
-                  <ComboBox fx:id="attackDefenderCB" layoutX="124.0" layoutY="43.0" prefHeight="22.0" prefWidth="103.0" />
-                  <Button fx:id="attackButton" layoutX="97.0" layoutY="129.0" mnemonicParsing="false" onAction="#attack" text="Attack" />
-                  <Button fx:id="attackFinishButton" layoutX="148.0" layoutY="129.0" mnemonicParsing="false" onAction="#finishAttack" text="Finish Phase" />
+                  <ComboBox fx:id="attackAttackerCB" layoutX="2.0" layoutY="43.0" onAction="#updateDefenderTerritories" prefHeight="22.0" prefWidth="122.0" />
+                  <ComboBox fx:id="attackDefenderCB" layoutX="131.0" layoutY="43.0" prefHeight="22.0" prefWidth="122.0" />
+                  <Button fx:id="attackButton" layoutX="118.0" layoutY="127.0" mnemonicParsing="false" onAction="#attack" text="Attack" />
+                  <Button fx:id="attackFinishButton" layoutX="169.0" layoutY="127.0" mnemonicParsing="false" onAction="#finishAttack" text="Finish Phase" />
                   <Label layoutX="23.0" layoutY="73.0" text="Attack Mode" />
-                  <RadioButton fx:id="allOutModeRB" layoutX="107.0" layoutY="73.0" mnemonicParsing="false" selected="true" text="All Out">
+                  <RadioButton fx:id="allOutModeRB" layoutX="114.0" layoutY="73.0" mnemonicParsing="false" selected="true" text="All Out">
                      <toggleGroup>
                         <ToggleGroup fx:id="attackMode" />
                      </toggleGroup>
                   </RadioButton>
-                  <RadioButton fx:id="normalModeRB" layoutX="170.0" layoutY="73.0" mnemonicParsing="false" text="Normal" toggleGroup="$attackMode" />
-                  <TextField fx:id="attackerTotalDiceTF" layoutX="13.0" layoutY="98.0" prefHeight="22.0" prefWidth="101.0" promptText="total attacker dice" />
-                  <TextField fx:id="defenderTotalDiceTF" layoutX="123.0" layoutY="98.0" prefHeight="22.0" prefWidth="101.0" promptText="total defender dice" />
+                  <RadioButton fx:id="normalModeRB" layoutX="188.0" layoutY="73.0" mnemonicParsing="false" text="Normal" toggleGroup="$attackMode" />
+                  <TextField fx:id="attackerTotalDiceTF" layoutX="32.0" layoutY="98.0" prefHeight="22.0" prefWidth="101.0" promptText="total attacker dice" />
+                  <TextField fx:id="defenderTotalDiceTF" layoutX="142.0" layoutY="98.0" prefHeight="22.0" prefWidth="101.0" promptText="total defender dice" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="fortiPhaseUI" prefHeight="128.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
+            <AnchorPane fx:id="fortiPhaseUI" prefHeight="134.0" prefWidth="241.0" style="-fx-border-color: black;" VBox.vgrow="NEVER">
                <VBox.margin>
                   <Insets top="2.0" />
                </VBox.margin>
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="5.0" prefHeight="14.0" prefWidth="141.0" text="Fortification Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="66.0" AnchorPane.rightAnchor="67.0" />
                   <Label layoutX="11.0" layoutY="25.0" prefHeight="22.0" text="From Territory" />
-                  <ComboBox fx:id="fortifyFromTerritoryCB" layoutX="11.0" layoutY="48.0" onAction="#updateFortifiableTerritories" prefHeight="22.0" prefWidth="103.0" />
-                  <ComboBox fx:id="fortifyToTerritoryCB" layoutX="123.0" layoutY="48.0" prefHeight="22.0" prefWidth="103.0" />
+                  <ComboBox fx:id="fortifyFromTerritoryCB" layoutX="3.0" layoutY="48.0" onAction="#updateFortifiableTerritories" prefHeight="22.0" prefWidth="122.0" />
+                  <ComboBox fx:id="fortifyToTerritoryCB" layoutX="130.0" layoutY="48.0" prefHeight="22.0" prefWidth="122.0" />
                   <Label layoutX="123.0" layoutY="25.0" prefHeight="22.0" text="To Territory" />
-                  <Button fx:id="fortifyMoveButton" layoutX="103.0" layoutY="109.0" mnemonicParsing="false" onAction="#doFortification" text="Move" />
-                  <Button fx:id="fortifyFinishButton" layoutX="149.0" layoutY="109.0" mnemonicParsing="false" onAction="#finishFortification" text="Finish Phase" />
-                  <Label layoutX="11.0" layoutY="75.0" prefHeight="22.0" text="Armies to move :" />
-                  <TextField fx:id="armiesNoToFortify" layoutX="123.0" layoutY="75.0" prefHeight="22.0" prefWidth="103.0" promptText="No. of armies" />
+                  <Button fx:id="fortifyMoveButton" layoutX="124.0" layoutY="106.0" mnemonicParsing="false" onAction="#doFortification" text="Move" />
+                  <Button fx:id="fortifyFinishButton" layoutX="170.0" layoutY="106.0" mnemonicParsing="false" onAction="#finishFortification" text="Finish Phase" />
+                  <Label layoutX="32.0" layoutY="76.0" prefHeight="22.0" text="Armies to move :" />
+                  <TextField fx:id="armiesNoToFortify" layoutX="144.0" layoutY="76.0" prefHeight="22.0" prefWidth="103.0" promptText="No. of armies" />
                </children>
             </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane prefHeight="32.0" prefWidth="241.0" style="-fx-border-color: black;" VBox.vgrow="NEVER">
                <children>
-                  <Button fx:id="saveGame" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="12.0" mnemonicParsing="false" onAction="#saveGameState" text="Save" />
-                  <Button fx:id="saveAndExitGame" layoutX="135.0" layoutY="12.0" mnemonicParsing="false" onAction="#saveAndExitGame" text="Save and Quit" />
+                  <Button fx:id="saveGame" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="55.0" layoutY="13.0" mnemonicParsing="false" onAction="#saveGameState" text="Save" AnchorPane.bottomAnchor="3.0" />
+                  <Button fx:id="saveAndExitGame" layoutX="111.0" layoutY="12.0" mnemonicParsing="false" onAction="#saveAndExitGame" text="Save and Quit" AnchorPane.bottomAnchor="3.0" />
                </children>
+               <VBox.margin>
+                  <Insets top="2.0" />
+               </VBox.margin>
             </AnchorPane>
          </children>
       </VBox>
