--- a/Risk/src/ui/Map.fxml
+++ b/Risk/src/ui/Map.fxml
@@ -42,14 +42,11 @@
 							<Font size="14.0" />
 						</font>
 					</Label>
-					<Label layoutX="24.0" layoutY="50.0" text="Choose Map" />
-					<TextField fx:id="mapPathGameTF" layoutX="97.0" layoutY="46.0" prefHeight="22.0" prefWidth="159.0" promptText="map file path" />
-					<Button fx:id="chooseGameButton" layoutX="270.0" layoutY="46.0" mnemonicParsing="false" onAction="#chooseMapToPlayGame" prefHeight="22.0" prefWidth="75.0" text="Choose..." />
-					<Button fx:id="startGameButton" layoutX="270.0" layoutY="88.0" mnemonicParsing="false" onAction="#startGame" prefHeight="22.0" prefWidth="75.0" text="Start Game" />
-               <Label layoutX="7.0" layoutY="113.0" prefHeight="17.0" prefWidth="85.0" text="Resume Game" />
-               <TextField fx:id="savedFilePath" layoutX="91.0" layoutY="106.0" promptText="game file" />
-               <Button layoutX="242.0" layoutY="118.0" mnemonicParsing="false" onAction="#chooseGameToResume" text="Choose File" />
-               <Button layoutX="319.0" layoutY="118.0" mnemonicParsing="false" onAction="#resumeGame" text="Resume" />
+					<Button fx:id="startGameButton" layoutX="161.0" layoutY="47.0" mnemonicParsing="false" onAction="#startGame" prefHeight="22.0" prefWidth="75.0" text="Start Game" />
+               <Label layoutX="6.0" layoutY="89.0" prefHeight="17.0" prefWidth="85.0" text="Resume Game" />
+               <TextField fx:id="savedFilePath" layoutX="87.0" layoutY="85.0" promptText="Game File" />
+               <Button layoutX="242.0" layoutY="85.0" mnemonicParsing="false" onAction="#chooseGameToResume" text="Choose File" />
+               <Button layoutX="244.0" layoutY="118.0" mnemonicParsing="false" onAction="#resumeGame" prefHeight="25.0" prefWidth="75.0" text="Resume" />
 				</AnchorPane>
 			</SplitPane>
 		</AnchorPane>
